05-IaaS-Containers/05-container-apps/deploy/kubernetes/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parts-unlimited-web  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parts-unlimited-web
  template:
    metadata:
      labels:
        app: parts-unlimited-web
    spec:
      containers:
      - name: parts-unlimited-web
        image: partsunlimited.azurecr.io/web:v0.1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: parts-unlimited-web  
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: parts-unlimited-web
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: parts-unlimited-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - parts-unlimited-ingress.partsunlimited.io
    secretName: tls-secret
  rules:
  - host: parts-unlimited-ingress.partsunlimited.io
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: parts-unlimited-web
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: parts-unlimited-ingress-static
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /static/$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - parts-unlimited-ingress.partsunlimited.io
    secretName: tls-secret
  rules:
  - host: parts-unlimited-ingress.partsunlimited.io
    http:
      paths:
      - path:
        pathType: Prefix
        backend:
          service:
            name: parts-unlimited-web
            port: 
              number: 80
        path: /static(/|$)(.*)
